--- a/hours.html
+++ b/hours.html
@@ -14,8 +14,8 @@
                 <nav>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="">About LTS</a></li>
-                        <li><a href="">Our Menu</a></li>
+                        <li><a href="/#about">About LTS</a></li>
+                        <li><a href="/#menu">Our Menu</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
